[gd_scene load_steps=10 format=3 uid="uid://6mg5vlmwgvpr"]

[ext_resource type="Script" uid="uid://dsdy267dlkntc" path="res://GDscripts/hud_ProgressBar.gd" id="1_ijstf"]
[ext_resource type="Texture2D" uid="uid://6tde23lkguq2" path="res://assets/Texture_Source/GUI.png" id="1_yixhe"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ijstf"]
atlas = ExtResource("1_yixhe")
region = Rect2(135, 20, 52, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_4n7mi"]
atlas = ExtResource("1_yixhe")
region = Rect2(71, 20, 50, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_yixhe"]
atlas = ExtResource("1_yixhe")
region = Rect2(135, 4, 45, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk570"]
atlas = ExtResource("1_yixhe")
region = Rect2(71, 4, 43, 7)

[sub_resource type="Animation" id="Animation_4n7mi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BosterBar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BosterBar:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HungerBar:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 9)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HungerBar:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ijstf"]
resource_name = "show_bar"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BosterBar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5),
"update": 0,
"values": [Vector2(-80, 1), Vector2(5, 1), Vector2(0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BosterBar:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 1,
"values": [true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HungerBar:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.366667, 0.5),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5),
"update": 0,
"values": [Vector2(-80, 9), Vector2(5, 9), Vector2(0, 9)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HungerBar:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 1,
"values": [true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uk570"]
_data = {
&"RESET": SubResource("Animation_4n7mi"),
&"show_bar": SubResource("Animation_ijstf")
}

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ijstf")
metadata/_edit_use_anchors_ = true

[node name="BosterBar" type="TextureProgressBar" parent="."]
offset_top = 1.0
offset_right = 52.0
offset_bottom = 8.0
texture_under = SubResource("AtlasTexture_ijstf")
texture_progress = SubResource("AtlasTexture_4n7mi")

[node name="HungerBar" type="TextureProgressBar" parent="."]
offset_top = 9.0
offset_right = 45.0
offset_bottom = 16.0
value = 100.0
texture_under = SubResource("AtlasTexture_yixhe")
texture_progress = SubResource("AtlasTexture_uk570")

[node name="barsAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_uk570")
}
